--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "prebuild": "npm run clear",
     "build": "parcel build src/index.html --public-url ./",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d ./dist -b gh-pages"
+    "deploy": "gh-pages -d ./dist -b gh-pages",
+    "push": "npm run format && git push & npm run deploy",
+    "format": "prettier --write \"src/**/*.js\"",
+    "lint": "eslint \"src/**/*.js\" --quiet"
   },
   "devDependencies": {
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
     "gh-pages": "^3.2.3",
-    "parcel": "^2.5.0"
+    "parcel": "^2.5.0",
+    "prettier": "^2.6.2"
   }
 }
