--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint \"src/**/*.js\" --quiet"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.5.0",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "gh-pages": "^3.2.3",
