--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
-    "decimal.js": "^10.3.1"
+    "decimal.js": "^10.3.1",
+    "xstate": "^4.35.4"
   }
 }
